機能追加とREADME更新。あといろいろ。